exercises/7.5/solution/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
  namespace: secure
spec:
  containers:
  - name: app
    image: nginx:1.27.1
