exercises/7.5/solution/bad-repo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-repo
  namespace: secure
  labels:
    owner: team-a
spec:
  containers:
  - name: app
    image: quay.io/prometheus/busybox
