exercises/7.5/solution/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good
  namespace: secure
  labels:
    owner: team-a
spec:
  containers:
  - name: app
    image: nginx:1.27.1
